Add a very glitchy psycho pass animation

--- a/reverse_shell/templates/index.html
+++ b/reverse_shell/templates/index.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>Welcome, {{ user.username }}!</h2>
+  <h2 id="welcome-message" class="welcome-message">Welcome, {{ user.username }}!</h2>
+
 {% endblock %}
+
