--- a/reverse_shell/templates/base.html
+++ b/reverse_shell/templates/base.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>{% block title %}Hacking is fun 😋{% endblock %}</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <header>
+    <header id="header" class="header">
       <h1>ReverseShell</h1>
       {% if user.is_authenticated %}
         <a href="{% url 'reverse_shell:logout' %}">logout</a>
