--- a/reverse_shell/templates/registration/login.html
+++ b/reverse_shell/templates/registration/login.html
@@ -1,13 +1,20 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
-  <h2>Log in to My Site</h2>
+  <link rel="stylesheet" href="{% static 'css/modal.css' %}">
+  <div class="modal fade" id="myModal" role="dialog" style="display: none;">
+      <div class="modal-dialog modal-md">
+        <center><video id="myVideo" class="myVideo" src="{% static 'images/video.mp4' %}"></video></center>
+      </div>
+  </div>
+  <h2 id="header2">Log in to My Site</h2>
   {% if form.errors %}
     <p style="color: red">Your username and password didn't match. Please try again.</p>
   {% endif %}
-  <form method="post">
+  <form method="post" id="form">
     {% csrf_token %}
-    <input type="hidden" name="next" value="{{ next }}" />
+    <input type="hidden" name="next" value="{{ next }}" id="input"/>
     {% for field in form %}
       <p>
         {{ field.label_tag }}<br>
@@ -20,7 +27,41 @@
         {% endif %}
       </p>
     {% endfor %}
-    <button type="submit">Log in</button>
+    <button type="button" onclick="playVideo()" id="button">Log in</button>
     <a href="{% url 'reverse_shell:signup' %}">New to My Site? Sign up</a>
   </form>
+
+  <script>
+    // Get the input field
+    var input = document.getElementById("form");
+    // Execute a function when the user releases a key on the keyboard
+    input.addEventListener("keyup", function(event) {
+      // Number 13 is the "Enter" key on the keyboard
+      if (event.keyCode === 13) {
+        // Cancel the default action, if needed
+        event.preventDefault();
+        // Trigger the button element with a click
+        document.getElementById("button").click();
+      }
+    });
+
+    document.getElementById('myVideo').addEventListener('ended', closeModal, false);
+
+    function playVideo() {
+        document.getElementById('header').style.display = "none";
+        document.getElementById('header2').style.display = "none";
+        document.getElementById('form').style.display = "none";
+        document.body.style.backgroundImage = "url(https://vignette.wikia.nocookie.net/psychopass/images/5/50/Wiki-background/revision/latest?cb=20181204222150)";
+        document.getElementById('myModal').style.display = "flex";
+        $("#myModal").modal()
+        $(".container").hide();
+        document.getElementById('myVideo').play();
+    }
+    function closeModal() {
+        $(".container").show();
+        $('#myModal').modal('hide');
+        document.getElementById('form').submit();
+    }
+  </script>
+
 {% endblock %}
