Remove enter key binding

--- a/reverse_shell/templates/registration/login.html
+++ b/reverse_shell/templates/registration/login.html
@@ -32,28 +32,16 @@
   </form>
 
   <script>
-    // Get the input field
-    var input = document.getElementById("form");
-    // Execute a function when the user releases a key on the keyboard
-    input.addEventListener("keyup", function(event) {
-      // Number 13 is the "Enter" key on the keyboard
-      if (event.keyCode === 13) {
-        // Cancel the default action, if needed
-        event.preventDefault();
-        // Trigger the button element with a click
-        document.getElementById("button").click();
-      }
-    });
-
     document.getElementById('myVideo').addEventListener('ended', closeModal, false);
 
     function playVideo() {
         // Validation shit
+        const form = document.getElementById('form');
         let xhr = new XMLHttpRequest();
         xhr.open('POST', '{% url "reverse_shell:validate_login" %}', false);
 
         try {
-          xhr.send(new FormData(input));
+          xhr.send(new FormData(form));
           if (xhr.status == 200) {
             // Animation shit
             document.getElementById('header').style.display = "none";
