Implement a simple websocket connection

--- a/reverse_shell/templates/room.html
+++ b/reverse_shell/templates/room.html
@@ -15,7 +15,7 @@
         const chatSocket = new WebSocket(
             'ws://'
             + window.location.host
-            + '/ws/reverse_shell/'
+            + '/ws/reverse_shell/connect/'
             + roomName
             + '/'
         );
