--- a/reverse_shell/templates/attack.html
+++ b/reverse_shell/templates/attack.html
@@ -9,8 +9,10 @@
     <input id="chat-message-input" type="text" size="100"><br>
     <input id="chat-message-submit" type="button" value="Send">
     <script>
+        var ws_scheme = window.location.protocol == "https:" ? "wss" : "ws";
         const chatSocket = new WebSocket(
-            'ws://'
+            ws_scheme
+            + '://'
             + window.location.host
             + '/ws/reverse_shell/attack/'
             + '/'
