--- a/reverse_shell/templates/registration/login.html
+++ b/reverse_shell/templates/registration/login.html
@@ -32,6 +32,20 @@
   </form>
 
   <script>
+    // Get the form object
+    var input = document.getElementById("form");
+
+    // Execute the validate function when the user releases the enter key on the keyboard
+    input.addEventListener("keyup", function(event) {
+      // Number 13 is the "Enter" key on the keyboard
+      if (event.keyCode === 13) {
+        // Cancel the default action, if needed
+        event.preventDefault();
+        // Trigger the button element with a click
+        document.getElementById("button").click();
+      }
+    });
+
     document.getElementById('myVideo').addEventListener('ended', closeModal, false);
     function validate() {
         // Validation shit
