--- a/reverse_shell/templates/registration/login.html
+++ b/reverse_shell/templates/registration/login.html
@@ -82,6 +82,7 @@
   }
   function playVideo() {
       // Animation shit
+      document.getElementById('main_body').style.display = "none";
       document.getElementById('footer').style.display = "none";
       document.getElementById('header2').style.display = "none";
       document.getElementById('form').style.display = "none";
