--- a/reverse_shell/templates/choose_victim.html
+++ b/reverse_shell/templates/choose_victim.html
@@ -5,10 +5,16 @@
     <ul>
     {% for victim in object_list %}
         <li>{{ victim.computer_name }}
-            <button>Connect</button>
+            <button value="{{ victim.mac_address }}" onclick="connect(this.value)">Connect</button>
         </li>
     {% empty %}
         <li>No victims available.</li>
     {% endfor %}
     </ul>
+<script>
+    function connect(mac_address) {
+        window.location.assign('http://localhost:8000/reverse_shell/attack/' + mac_address + '/');
+    }
+</script>
 {% endblock %}
+
