--- a/reverse_shell/templates/attack.html
+++ b/reverse_shell/templates/attack.html
@@ -21,6 +21,7 @@
         var term = new Terminal();
         term.open(document.getElementById('terminal'));
         var command = '';
+        var cursor = 0;
         runFakeTerminal();
 
         chatSocket.onmessage = function(e) {
@@ -53,7 +54,17 @@
             term.onKey(e => {
                 const printable = !e.domEvent.altKey && !e.domEvent.altGraphKey && !e.domEvent.ctrlKey && !e.domEvent.metaKey;
 
-                if (e.domEvent.keyCode === 13) {
+                if (e.domEvent.keyCode === 39) {
+                    if(cursor < command.length) {
+                        term.write(e.key);
+                        cursor += 1;
+                    }
+                } else if (e.domEvent.keyCode === 37) {
+                    if(cursor > 0) {
+                        term.write(e.key);
+                        cursor -= 1;
+                    }
+                } else if (e.domEvent.keyCode === 13) {
                     prompt(term);
                 } else if (e.domEvent.keyCode === 8) {
                     // Do not delete the prompt
@@ -61,8 +72,13 @@
                         term.write('\b \b');
                     }
                 } else if (printable) {
-                    term.write(e.key);
-                    command += e.key;
+                    data = command.slice(cursor, command.length);
+                    term.write(e.key + data);
+                    for(i = 0; i < command.length - cursor; i++) {
+                        term.write('\x1b[D');
+                    }
+                    command = command.substr(0, cursor) + e.key + command.substr(cursor);
+                    cursor += 1;
                 }
             });
         }
