--- a/reverse_shell/templates/attack.html
+++ b/reverse_shell/templates/attack.html
@@ -49,7 +49,7 @@
             term.writeln("You are now connected to the victim's terminal.");
             term.writeln('You have admin permissions so feel free to play around 😉');
             term.writeln('');
-            term.write('\r\n$ ');
+            term.prompt();
 
             term.onKey(e => {
                 const printable = !e.domEvent.altKey && !e.domEvent.altGraphKey && !e.domEvent.ctrlKey && !e.domEvent.metaKey;
@@ -69,7 +69,14 @@
                 } else if (e.domEvent.keyCode === 8) {
                     // Do not delete the prompt
                     if (term._core.buffer.x > 2) {
-                        term.write('\b \b');
+                    // Delete whole line
+                    term.write('\x1b[2K\r');
+                    command = command.slice(0, cursor - 1) + command.slice(cursor);
+                    term.write('$ ' + command);
+                    for(i = 0; i <= command.length - cursor; i++) {
+                        term.write('\x1b[D');
+                    }
+                    cursor -= 1;
                     }
                 } else if (printable) {
                     data = command.slice(cursor, command.length);
@@ -90,6 +97,7 @@
                 'message': command
             }));
           command = '';
+          cursor = 0;
         }
     </script>
 </body>
