--- a/reverse_shell/templates/attack.html
+++ b/reverse_shell/templates/attack.html
@@ -22,6 +22,8 @@
         term.open(document.getElementById('terminal'));
         var command = '';
         var cursor = 0;
+        var command_history = [];
+        var index = command_history.length;;
         runFakeTerminal();
 
         chatSocket.onmessage = function(e) {
@@ -55,14 +57,33 @@
                 const printable = !e.domEvent.altKey && !e.domEvent.altGraphKey && !e.domEvent.ctrlKey && !e.domEvent.metaKey;
 
                 if (e.domEvent.keyCode === 39) {
-                    if(cursor < command.length) {
+                    if (cursor < command.length) {
                         term.write(e.key);
                         cursor += 1;
                     }
                 } else if (e.domEvent.keyCode === 37) {
-                    if(cursor > 0) {
+                    if (cursor > 0) {
                         term.write(e.key);
                         cursor -= 1;
+                    }
+                } else if (e.domEvent.keyCode === 38) {
+                    if (index > 0) {
+                        index -= 1;
+                    }
+                    command = command_history[index];
+                    // Delete whole line
+                    term.write('\x1b[2K\r');
+                    term.write('$ ' + command);
+                } else if (e.domEvent.keyCode === 40) {
+                    // Delete whole line
+                    term.write('\x1b[2K\r');
+                    if (index < command_history.length - 1) {
+                        index += 1;
+                        command = command_history[index];
+                        term.write('$ ' + command);
+                    } else {
+                        command = '';
+                        term.write('$ ');
                     }
                 } else if (e.domEvent.keyCode === 13) {
                     prompt(term);
@@ -96,6 +117,10 @@
           chatSocket.send(JSON.stringify({
                 'message': command
             }));
+          if (command !== '') {
+            command_history.push(command);
+          }
+          index = command_history.length;
           command = '';
           cursor = 0;
         }
