--- a/reverse_shell/templates/attack.html
+++ b/reverse_shell/templates/attack.html
@@ -47,9 +47,15 @@
                 term.write('\r\n$ ');
             };
 
-            term.writeln('Welcome to ReverseShell');
+            term.writeln(" _____                               _____ _          _ _");
+            term.writeln("|  __ \\                             / ____| |        | | |");
+            term.writeln("| |__) |_____   _____ _ __ ___  ___| (___ | |__   ___| | |");
+            term.writeln("|  _  // _ \\ \\ / / _ \\ '__/ __|/ _ \\\\___ \\| '_ \\ / _ \\ | |");
+            term.writeln("| | \\ \\  __/\\ V /  __/ |  \\__ \\  __/____) | | | |  __/ | |");
+            term.writeln("|_|  \\_\\___| \\_/ \\___|_|  |___/\\___|_____/|_| |_|\\___|_|_|");
+            term.writeln('');
             term.writeln("You are now connected to the victim's terminal.");
-            term.writeln('You have admin permissions so feel free to play around 😉');
+            term.writeln("To quit the program type: 'quit'. You will be redirected to the homepage.");
             term.writeln('');
             term.prompt();
 
