Add link to choosing a victim

--- a/reverse_shell/templates/base.html
+++ b/reverse_shell/templates/base.html
@@ -10,7 +10,8 @@
     <header id="header" class="header">
       <h1>ReverseShell</h1>
       {% if user.is_authenticated %}
-        <a href="{% url 'reverse_shell:logout' %}">logout</a>
+        <a style="padding-right: 10px;" href="{% url 'reverse_shell:logout' %}">logout</a>
+        <a href="{% url 'reverse_shell:choose_victim' %}">Connect to victim</a>
       {% else %}
         <a href="{% url 'reverse_shell:login' %}">login</a> / <a href="{% url 'reverse_shell:signup' %}">signup</a>
       {% endif %}
