--- a/reverse_shell/templates/base.html
+++ b/reverse_shell/templates/base.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    {% load static %}
     <meta charset="utf-8">
-    <title>{% block title %}Hacking is fun 😋{% endblock %}</title>
+    <link rel="icon" href="{% static 'images/favicon.ico' type='image/x-icon' %}">
+    <title>{% block title %}FhcrePbbyErirefrFuryy{% endblock %}</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
