--- a/reverse_shell/templates/registration/login.html
+++ b/reverse_shell/templates/registration/login.html
@@ -2,6 +2,8 @@
 <html lang="en"><head>
     {% load static %}
     <meta charset="utf-8">
+    <link rel="icon" href="{% static 'images/favicon.ico' type='image/x-icon' %}">
+    <title>{% block title %}FhcrePbbyErirefrFuryy{% endblock %}</title>
     <title>Hacking is fun 😋</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
