Add design for register page

--- a/reverse_shell/templates/attack.html
+++ b/reverse_shell/templates/attack.html
@@ -4,7 +4,7 @@
     {% load static %}
     <meta charset="utf-8"/>
     <link rel="icon" href="{% static 'images/favicon.ico' type='image/x-icon' %}">
-    <title>{% block title %}FhcrePbbyErirefrFuryy{% endblock %}</title>
+    <title>FhcrePbbyErirefrFuryy</title>
     <title>ReverseShell</title>
     <link rel="stylesheet" href="{% static 'node_modules/xterm/css/xterm.css' %}" />
     <script src="{% static 'node_modules/xterm/lib/xterm.js' %}"></script>
