--- a/reverse_shell/templates/registration/register.html
+++ b/reverse_shell/templates/registration/register.html
@@ -1,10 +1,38 @@
-{% extends 'base.html' %}
-
-{% block content %}
-  <h2>Sign up</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Sign up</button>
-  </form>
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en"><head>
+    {% load static %}
+    <meta charset="utf-8">
+    <link rel="icon" href="{% static 'images/favicon.ico' type='image/x-icon' %}">
+    <title>FhcrePbbyErirefrFuryy</title>
+    <link rel="stylesheet" href="{% static 'css/register.css' %}">
+    </head>
+  <body>
+    <main>
+      <h2 id="header2">Sign up</h2>
+      <div id="main_body">
+        <form method="post">
+          {% csrf_token %}
+          <input type="hidden" name="next" value="{{ next }}" id="input"/>
+            {% for field in form %}
+              <p>
+                {{ field.label_tag }}<br>
+                {{ field }}<br>
+                {% for error in field.errors %}
+                  <p style="color: red">{{ error }}</p>
+                {% endfor %}
+                {% if field.help_text %}
+                  <p><small style="color: black">{{ field.help_text }}</small></p>
+                {% endif %}
+              </p>
+            {% endfor %}
+          <button id="button" type="submit">Sign up</button>
+          <br><br>
+          <a id="login" href="{% url 'reverse_shell:login' %}">Already Have an Account? Sign in</a>
+        </form>
+      </div>
+      <div id="footer" class="footer">
+        <p>All rights are reserved to Daniel Eidlin.</p>
+      </div>
+    </main>
+  </body>
+</html>
